roughly/tests/snapshots/test_format__binary_operator-6.snap
---
source: src/format.rs
expression: "fmt(indoc!\n{ r#\"\n            foo %>% bar %>%\n                    baz\n        \"# })"
---
foo %>% bar %>%
  baz
