roughly/tests/snapshots/test_format__binary_operator.snap
---
source: src/format.rs
expression: "fmt(indoc!\n{\n    r#\"\n            4 + 2\n            4 + 2*3\n            4 +\n                3 +\n                    2 +\n                        1\n        \"#\n})"
---
4 + 2
4 + 2 * 3
4 +
  3 +
  2 +
  1
