roughly/tests/snapshots/test_format__braced_expression-4.snap
---
source: src/format.rs
expression: "fmt(indoc! { r#\"\n            {foo;\n                bar}\n        \"# })"
---
{
  foo
  bar
}
