roughly/tests/snapshots/test_format__braced_expression-9.snap
---
source: src/format.rs
expression: "format_str(indoc! { r#\"\n            { foo; bar }\n        \"# }).unwrap()"
---
{ foo; bar }
