roughly/tests/snapshots/test_format__comments-2.snap
---
source: src/format.rs
expression: "format_str(indoc!\n{ r#\"\n            #!/usr/bin/env Rscript\n        \"# }).unwrap()"
---
#!/usr/bin/env Rscript
