roughly/tests/snapshots/test_format__fmt_skip-6.snap
---
source: tests/test_format.rs
expression: "format_str(indoc!\n{\n    r#\"\n        # fmt: skip\n        1+2\n        (\n            # fmt: skip\n            1+2\n        )\n        {\n            # fmt: skip\n            1+2\n        }\n        if (\n            # fmt: skip\n            1+2\n        ) {}\n        for (\n            variable\n            in\n            # fmt: skip\n            1+2\n        ) {}\n        while (\n            condition &&\n                # fmt: skip\n                1+2\n        ) {}\n        function(\n            # fmt: skip\n            a=1+2\n        ) {}\n        fn(\n            # fmt: skip\n            1+2\n        )\n        fn[\n            # fmt: skip\n            1+2\n        ]\n    \"#\n}).unwrap()"
---
# fmt: skip
1+2
(
  # fmt: skip
  1+2
)
{
  # fmt: skip
  1+2
}
if (
  # fmt: skip
  1+2
) {}
for (
  variable
  in
  # fmt: skip
  1+2
) {}
while (
  condition &&
    # fmt: skip
    1+2
) {}
function(
  # fmt: skip
  a=1+2
) {}
fn(
  # fmt: skip
  1+2
)
fn[
  # fmt: skip
  1+2
]
