roughly/tests/snapshots/test_format__namespace_get.snap
---
source: src/format.rs
expression: "format_str(indoc!\n{\n    r#\"\n            foo::\n            foo::bar\n            foo::bar(1)\n            foo::...\n            foo::..1\n        \"#\n})"
---
foo::
foo::bar
foo::bar(1)
foo::
...
foo::
..1
